--- a/resume1/android.tex
+++ b/resume1/android.tex
@@ -7,10 +7,10 @@
 \pagestyle{empty}
 
 \name{高正炎}
-\job{安全/Android/PHP实习生}
+\job{Android实习生}
 \contactInfo{{moyishizhe@gmail.com}}{18404968744}{http://dbqf.xyz}
 \section{项目经历}
-\datedsubsection{\textbf{解魔方机器人} , \href{https://github.com/DigDream/RubiksCubeRobot}{Github}, \href{http://v.youku.com/v_show/id_XMTQ1NjExMTk3Mg==.html}{优酷}}{2015 年3 月 -- 2015 年5 月}
+\datedsubsection{\textbf{解魔方机器人} , \href{https://github.com/DigDream/RubiksCubeRobot}{GitHub}, \href{http://v.youku.com/v_show/id_XMTQ1NjExMTk3Mg==.html}{优酷}}{2015 年3 月 -- 2015 年5 月}
 \role{设计、开发}{Android, arduino}
 \begin{onehalfspacing}
 机器人硬件部分负责复原、打乱，识别部分采用手机APP摄像头扫描。
@@ -21,10 +21,10 @@
 \end{itemize}
 \end{onehalfspacing}
 
-\datedsubsection{\textbf{大学圈圈客户端}, Android, \href{https://github.com/DigDream/shopnc-app}{Github}, \href{http://fir.im/vkeyandev}{Fir.im}}{2015 年8 月 -- 2015 年10 月}
+\datedsubsection{\textbf{大学圈圈客户端}, Android, \href{https://github.com/DigDream/shopnc-app}{GitHub}, \href{http://fir.im/vkeyandev}{Fir.im}}{2015 年8 月 -- 2015 年10 月}
 \begin{onehalfspacing}
 \begin{itemize}
-  \item \href{https://github.com/dubuqingfeng/some-textviews}{实现了一种仿TextView垂直滚动轮换效果}
+  \item {实现了一种仿TextView垂直滚动轮换效果}
   \item {在开发过程中，遇到过gridview和listview或者两个listview在同一界面之间的高度问题并解决。}
 \end{itemize}
 \end{onehalfspacing}
@@ -36,7 +36,6 @@
   \item 平台: Mac OS X, Linux
   \item 开发: Docker, Vagrant, Git
   \item 数据库: MySQL > Mongodb > Redis
-  \item 安全: 了解一些常见安全漏洞, 并注重防范
 \end{itemize}
 \end{onehalfspacing}
 
