更新一些简历

--- a/resume1/php.tex
+++ b/resume1/php.tex
@@ -7,9 +7,19 @@
 \pagestyle{empty}
 
 \name{高正炎}
-\job{Android实习生}
+\job{后端开发实习生}
 \contactInfo{{moyishizhe@gmail.com}}{18404968744}{http://dbqf.xyz}
 \section{项目经历}
+\datedsubsection{\textbf{猎鹰Docker云系统安全培训平台} , \href{http://www.lysec.org}{网址}}{2016 年7 月 -- 2016 年8 月}
+\begin{onehalfspacing}
+负责整体架构及后端实现
+\begin{itemize}
+  \item 利用 Docker 虚拟化技术复现漏洞，实现了多用户的隔离环境。
+  \item 使用 etcd、confd、nginx、Docker、Phalcon等技术栈搭建平台环境。
+  \item 构建了多个存在漏洞的镜像。
+\end{itemize}
+\end{onehalfspacing}
+
 \datedsubsection{\textbf{解魔方机器人} , \href{https://github.com/DigDream/RubiksCubeRobot}{GitHub}, \href{http://v.youku.com/v_show/id_XMTQ1NjExMTk3Mg==.html}{优酷}}{2015 年3 月 -- 2015 年5 月}
 \role{设计、开发}{Android, arduino}
 \begin{onehalfspacing}
@@ -21,35 +31,21 @@
 \end{itemize}
 \end{onehalfspacing}
 
-\datedsubsection{\textbf{大学圈圈客户端}, Android, \href{https://github.com/DigDream/shopnc-app}{GitHub}, \href{http://fir.im/vkeyandev}{Fir.im},\href{http://www.wandoujia.com/apps/com.vkeyan.keyanzhushou}{豌豆荚}}{2015 年8 月 -- 2015 年10 月}
-\begin{onehalfspacing}
-\begin{itemize}
-  \item {实现了一种仿TextView垂直滚动轮换效果}
-  \item {在开发过程中，遇到过gridview和listview或者两个listview在同一界面之间的高度问题并解决。}
-\end{itemize}
-\end{onehalfspacing}
-
 \section{IT 技能}
 \begin{onehalfspacing}
 \begin{itemize}[parsep=0.5ex]
-  \item 编程语言: Java > PHP > C++ == Python
-  \item 平台: Mac OS X, Linux
-  \item 开发: Docker, Vagrant, Git
+  \item 熟悉 PHP 及 PHP 基本框架 Phalcon、ThinkPHP，了解 Python 开发
+  \item 熟悉 Android 安全及开发
   \item 数据库: MySQL > Mongodb > Redis
-  \item 具备良好的英文阅读能力
+  \item 熟悉基本渗透测试
+  \item 熟悉 Docker 及 DevOps 基本实践
 \end{itemize}
 \end{onehalfspacing}
 
 \section{获奖情况}
 \datedline{解魔方机器人, \textit{国家二等奖}, 全国第十一届博创杯比赛}{2015 年7 月}
-\datedline{2014联想茄子快传校园开发者大赛50强}{2014 年}
-\datedline{Worktile Hackathon活动三等奖}{2015 年}
-\datedline{圈圈, 2015华北五省计算机应用大赛三等奖}{2015 年}
-\datedline{Yi约, 2013华北五省计算机应用大赛三等奖}{2013 年}
 
 \section{实践经历}
-\datedline{2015 年联想全国创业大赛 晋级华北大区决赛}{2015 年}
-\datedline{社交订餐平台, 首届“晋商杯”大学生创业大赛二等奖}{2014 年}
 \datedline{创办并运营CSDN高校俱乐部社团, 并获优秀社团}{2013 年 -- 2015 年}
 
 \section{教育背景}
