--- a/resume1/security.tex
+++ b/resume1/security.tex
@@ -7,43 +7,37 @@
 \pagestyle{empty}
 
 \name{高正炎}
-\job{安全实习生}
+\job{安全工程师}
 \contactInfo{{moyishizhe@gmail.com}}{18404968744}{http://dbqf.xyz}
 \section{项目经历}
-\datedsubsection{\textbf{分布式漏洞爬虫} , \href{https://github.com/DigDream/RubiksCubeRobot}{Github}}{2016 年3 月 -- 2016 年5 月}
-\begin{onehalfspacing}
-\begin{itemize}
-  \item 通过编写分布式爬虫，利用scrapy，celery，写入到mongodb数据库，对漏洞进行统计分析
-  \item 支持乌云、Seebug、Exploit-db，可通过Docker部署
-\end{itemize}
-\end{onehalfspacing}
 
-\datedsubsection{\textbf{WiFi安全管家}, Android, \href{https://github.com/DigDream/shopnc-app}{Github}, \href{http://fir.im/vkeyandev}{Fir.im}}{2014 年5 月 -- 2014 年6 月}
+\datedsubsection{\textbf{解魔方机器人} , \href{https://github.com/DigDream/RubiksCubeRobot}{GitHub}, \href{http://v.youku.com/v_show/id_XMTQ1NjExMTk3Mg==.html}{优酷}}{2015 年3 月 -- 2015 年5 月}
 \begin{onehalfspacing}
-\begin{itemize}
-  \item {实现了一种仿TextView垂直滚动轮换效果}
-  \item {在开发过程中，遇到过gridview和listview或者两个listview在同一界面之间的高度问题并解决。}
-\end{itemize}
-\end{onehalfspacing}
-
-\datedsubsection{\textbf{解魔方机器人} , \href{https://github.com/DigDream/RubiksCubeRobot}{Github}}{2015 年3 月 -- 2015 年5 月}
-\begin{onehalfspacing}
-机器人硬件部分负责复原、打乱，识别部分采用手机APP摄像头扫描。
+机器人硬件部分负责复原、打乱，识别部分采用手机APP摄像头扫描。负责硬件部分设计和手机客户端开发及上位机代码。
 \begin{itemize}
   \item 与网上大部分的相比，实现了一种更加稳定的结构。在平台上，后来用到了ARM，遇到了多路输出pwm的问题，经过耐心的查找资料，调试，后来在比赛中采用了定时器输出pwm的方式。
   \item 利用OpenCV高效地进行颜色识别，遇到了环境强光减弱识别效果的问题，所以将识别图像由RGB模式转换到HSV模式。
-  \item Android客户端集成了计时器，打乱公式，复原纪录，魔坛资讯等实用功能
+  \item Android客户端集成了计时器，打乱公式，复原纪录，魔坛资讯等实用功能。
+\end{itemize}
+\end{onehalfspacing}
+
+\datedsubsection{\textbf{猎鹰Docker云系统安全培训平台} , \href{http://www.lysec.org}{网址}}{2016 年7 月 -- 2016 年8 月}
+\begin{onehalfspacing}
+负责整体架构及后端实现
+\begin{itemize}
+  \item 利用 Docker 虚拟化技术复现漏洞，实现了多用户的隔离环境。
+  \item 使用 etcd、confd、nginx、Docker、Phalcon等技术栈搭建平台环境。
+  \item 构建了多个存在漏洞的镜像。
 \end{itemize}
 \end{onehalfspacing}
 
 \section{IT 技能}
 \begin{onehalfspacing}
 \begin{itemize}[parsep=0.5ex]
-  \item 编程语言: Java > PHP > C++ == Python
-  \item 平台: Mac OS X, Linux
-  \item 开发: Docker, Vagrant, Git
-  \item 数据库: MySQL > Mongodb > Redis
-  \item 安全: 了解一些常见安全漏洞, 并注重防范
+  \item 熟悉 Android 安全及开发
+  \item 熟悉基本渗透测试
+  \item 熟悉 PHP 及 PHP 基本框架 Phalcon，了解 Python 开发
+  \item 熟悉 Docker 及 DevOps 基本实践
 \end{itemize}
 \end{onehalfspacing}
 
@@ -55,7 +49,7 @@
 
 \section{教育背景}
 \datedsubsection{\textbf{山西农业大学}}{2013 -- 至今}
-\textit{在读本科}\ 软件工程, 预计 2017 年 6 月毕业
+\textit{在读本科}\ 软件工程,  2017 年 6 月毕业
 
 \section{其他}
 \begin{itemize}[parsep=0.5ex]
